# bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.js  app.yml  deploy_guide.md  docker-compose.yml  index.js  migration_handoff.md  nixpacks.toml  package-lock.json  package.json  skills-lock.json
.github/workflows/: ci.yml  docker-build.yml
examples/: debug_payload.rs
lib/: jules.js  utils.js
src/: config.rs  handlers.rs  jules.rs  lib.rs  main.rs  review.rs
test/: codeblocks.test.js  difflines.test.js  index.test.js  utils.test.js
tests/: run_e2e_tests.sh  test_config.rs  test_difflines.rs  test_utils.rs
tests/payloads/: issue_comment.json  pr_opened.json
