[package]
name = "bot"
version = "0.1.0"
edition = "2024"
description = "AI-powered GitHub PR reviewer using Google Jules"
license = "ISC"

[dependencies]
octofer = "0.1.0"
anyhow = "1.0.98"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "2.0.16"

[dev-dependencies]
axum = "0.8.8"
serial_test = "3.4.0"
tempfile = "3.8"
tower = "0.5.3"

# opt-lto-release, opt-codegen-units (AGENTS.md)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
